<resources>
    <string name="app_name">TemperatureGaugeBaby</string>
    <string name="action_settings">Settings</string>

    <!-- 用于通过唯一的identificationCode获取 -->
    <string name="rfab_identification_code_fragment_a">RFAB_IDENTIFICATION_CODE_FRAGMENT_A</string>
    <string name="rfab_identification_code_fragment_b">RFAB_IDENTIFICATION_CODE_FRAGMENT_B</string>
    <string name="rfab_identification_code_fragment_c">RFAB_IDENTIFICATION_CODE_FRAGMENT_C</string>

    <!--基础文字-->
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <!--主界面-->
    <string name="etp">环境温度</string>
    <string name="test">点击测量</string>
    <string name="mfunction">多功能</string>

    <!--蓝牙设备弹窗-->
    <string name="pop_devivelist_text1">切换用户</string>
    <string name="pop_devivelist_text2">选择当前</string>
    <string name="pop_devivelist_text3">新建用户</string>

    <!--新建baby-->
    <string name="pop_newuser_text1">添加用户</string>
    <string name="pop_newuser_text2">输入名称</string>

    <!--相册相机-->
    <string name="photo">相册</string>
    <string name="camera">相机</string>

    <!--setting-->
    <string name="high_alarm">高温报警</string>
    <string name="start">32.0℃</string>
    <string name="end">42.0℃</string>

    <!--历史纪录-->
    <string name="test_tp">温度测量</string>
    <string name="history_tp">历史记录</string>
    <string name="test_list">测量列表</string>
</resources>
