<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP_100dp"
        android:background="@color/blue"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP_40dp"
            android:gravity="center"
            android:text="@string/high_alarm"
            android:textColor="@color/white"
            android:textSize="@dimen/SP_17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/tv_bg"
                android:gravity="center"
                android:padding="3dp"
                android:layout_marginLeft="@dimen/DP_50dp"
                android:singleLine="true"
                android:text="38.5℃"
                android:textColor="@android:color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_start"
                    android:layout_width="@dimen/DP_50dp"
                    android:layout_height="@dimen/DP_20dp"
                    android:layout_marginLeft="@dimen/DP_10dp"
                    android:gravity="center"
                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:textSize="@dimen/SP_14sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/DP_20dp"
                    android:gravity="center">

                <SeekBar
                    android:id="@+id/sb_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxHeight="8dp"
                    android:minHeight="4dp"
                    android:progressDrawable="@drawable/duration_seekbar_style"
                    android:thumb="@drawable/dot_on"
                    android:thumbOffset="0dp"
                    android:indeterminate="false" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/DP_10dp"
                    android:gravity="center"
                    android:text="@string/end"
                    android:textColor="@color/white"
                    android:textSize="@dimen/SP_14sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ListView
        android:background="@color/white"
        android:id="@+id/sound_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP_160dp"
        android:divider="@color/black_gry"
        android:dividerHeight="1px"
        android:listSelector="@color/transparent"
        android:scrollbars="none"></ListView>

    <LinearLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="@dimen/DP_60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        >

        <Button
            android:id="@+id/bt_linkBle"
            android:layout_width="0dp"
            android:layout_height="@dimen/DP_40dp"
            android:layout_below="@+id/blelist"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/DP_20dp"
            android:layout_marginRight="@dimen/DP_10dp"
            android:layout_weight="1"
            android:background="@drawable/pop_devicelist_button1"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/bt_newUser"
            android:layout_width="0dp"
            android:layout_height="@dimen/DP_40dp"
            android:layout_below="@+id/blelist"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/DP_10dp"
            android:layout_marginRight="@dimen/DP_20dp"
            android:layout_weight="1"
            android:background="@drawable/pop_devicelist_button2"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>