<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_devicelist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

   <RelativeLayout
       android:id="@+id/rl_pop"
        android:layout_width="240dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="60dp"
        android:background="@drawable/pop_devivelist_bg">
        <TextView
            android:id="@+id/pop_devivelist_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/pop_newuser_text1"
            android:textColor="@color/black_three"
            android:textSize="17sp" />


       <com.example.theone.temperaturegaugebaby.views.CircleImageView
           android:id="@+id/iv_newuser"
           android:layout_width="@dimen/DP_80dp"
           android:layout_height="@dimen/DP_80dp"
           android:layout_above="@+id/et_name"
           android:layout_centerHorizontal="true"
           android:background="@drawable/baby_default1"
           android:layout_marginLeft="@dimen/DP_10dp"
           android:layout_marginBottom="@dimen/DP_20dp"
           android:layout_marginRight="@dimen/DP_10dp"></com.example.theone.temperaturegaugebaby.views.CircleImageView>


       <EditText
           android:id="@+id/et_name"
           android:layout_above="@+id/bt_newUser"
           android:layout_width="@dimen/DP_80dp"
           android:layout_height="@dimen/DP_30dp"
           android:hint="@string/pop_newuser_text2"
           android:gravity="center"
           android:textSize="@dimen/SP_12sp"
           android:layout_centerHorizontal="true"
           android:textColorHighlight="@color/black_three"
           android:layout_marginRight="@dimen/DP_40dp"
           android:layout_marginLeft="@dimen/DP_40dp"
           android:paddingTop="@dimen/DP_8dp"
           android:paddingBottom="@dimen/DP_8dp"
           android:background="@drawable/et_bg"/>

        <Button
            android:id="@+id/bt_newUser"
            android:layout_width="match_parent"
            android:layout_height="@dimen/DP_40dp"
            android:layout_below="@+id/blelist"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/DP_10dp"
            android:layout_marginLeft="@dimen/DP_20dp"
            android:layout_marginBottom="@dimen/DP_10dp"
            android:background="@drawable/pop_devicelist_button1"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

    </RelativeLayout>

</RelativeLayout>